# ros2_template

./: README.md
python_ws/: README.md
python_ws/src/example_interfaces/: package.xml
python_ws/src/example_interfaces/action/: Example.action
python_ws/src/example_interfaces/msg/: Example.msg
python_ws/src/example_interfaces/srv/: Example.srv
python_ws/src/template_py_pkg/: package.xml  setup.cfg  setup.py
python_ws/src/template_py_pkg/template_py_pkg/: template_node.py
template_ws/src/example_interfaces/: CMakeLists.txt
template_ws/src/example_interfaces/action/: Example.action
template_ws/src/example_interfaces/srv/: Example.srv
template_ws/src/template_cpp_pkg/: CMakeLists.txt  package.xml
template_ws/src/template_cpp_pkg/src/: template.cpp
