<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_cpp_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="raven.hollick@gmail.com">raven</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!--
  ________________________________________________________________
  # Dependencies required to build and run the package should be
  # added here using the depend tag
  #
  # Multiple dependencies can be added using multiple depend tags
  # Dependencies can include libraries, message packages, service packages, etc.
  #
  # Example: <depend><dependency></depend>
  ________________________________________________________________
  -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
